fix: title and links align

--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,7 +3,7 @@
   margin: 0;
   font-weight: 900;
   font-size: 72px;
-  line-height: 1.09;
+  line-height: 1;
   color: #ffffff;
 }
 
@@ -17,7 +17,6 @@
   .place__title {
     max-width: 340px;
     font-size: 42px;
-    line-height: 1.1;
   }
 }
 
@@ -31,7 +30,6 @@
   .place__title {
     max-width: 288px;
     font-size: 32px;
-    line-height: 1.09;
   }
 }
 
